src/styles/components/_forms.scss
/* ... */
.radio-wrapper,
.checkbox-wrapper {
  display: flex;
  align-items: flex-start;
  padding: 1px 0 0;
  cursor: pointer;

  &.m-inline {
    display: inline-flex;
    margin-right: 25px;
  }

  input {
    display: none;

    &:checked {

      + .label {

        &:after {
          opacity: 1;
        }
      }
    }
  }

  .label {
    font-weight: 400;
    padding-left: 30px;
    position: relative;

    a {
      font-weight: 500;
      color: $secondary-color;
    }

    &:after {
      content: "";
      position: absolute;
      opacity: .3;
    }
  }

  &.disabled {
    .label  {
      opacity: .5;
    }
  }

  @include media-breakpoint-down($desktop-breakpoint-dcrs) {
    .input-desc {
      font-size: 13px;
      opacity: 0.5;
    }
  }
}

.radio-wrapper {

  input[type="radio"] {

    &:checked {

      + .label {
        font-weight: 500;

        &:after {
          background-color: $primary-color;
          box-shadow: 0 0 0 2px $primary-color;
        }
      }
    }
  }

  .label {

    &:after {
      width: 10px;
      height: 10px;
      border: 3px solid $white;
      transition: border-color .3s ease, opacity .3s ease;
      border-radius: 1000px;
      box-shadow: 0 0 0 2px $main-color;
      left: 2px;
      top: 1px;
      box-sizing: content-box;
    }
  }
}

.checkbox-wrapper {

  input[type="checkbox"] {

    &:checked {

      + .label {

        &:after {
          background: $primary-color;
          box-shadow: none;
          content: "\E604";
        }
      }
    }
  }

  .label {

    &.payouts-desc {
      opacity: 1;
      margin-top: 2px;

      &:after {
        top: -2px;
      }
    }

    &:after {
      border-radius: 2px;
      box-shadow: 0 0 0 2px $main-color inset;
      left: 3px;
      top: 0;
      width: 18px;
      height: 18px;
      font-size: 18px;
      line-height: 18px;
      text-align: center;
      transition: background .3s ease, box-shadow .3s ease, opacity .3s ease;
      color: #fff;
    }
  }
}

.input-notice {
  padding: 7px 5px 0;
  font-size: 13px;
  @include media-breakpoint-up($desktop-breakpoint) {
    padding: 7px 0 0;
  }
}
.input-status {
  text-align: center;
  padding: 6px 0;
  opacity: 0.5;
  flex: 1;
}

.col-form-lg {
  flex: 0 1 71%;
  width: 71%;
  @include media-breakpoint-up($desktop-breakpoint) {
    flex-basis: 63%;
    width: 63%;
  }
}
.col-form-sm {
  flex: 0 1 29%;
  width: 29%;
  @include media-breakpoint-up($desktop-breakpoint) {
    flex-basis: 37%;
    width: 37%;
  }

  .input-cvv.label {
    @include media-breakpoint-up($desktop-breakpoint) {
      margin-right: 16px;
    }

    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
      padding-left: 10px;
    }
  }
}

.select-wrapper {
  position: relative;
  width: 100%;

  &_short {
    max-width: 180px;
  }

  &:before {
    content: '\E608';
    @include icon-font;
    right: 0;
    top: 0;
    bottom: 0;
    width: 34px;
    line-height: 30px;
    position: absolute;
    pointer-events: none;
    display: block;
    opacity: .3;
    font-size: 24px;
  }

  select {
    padding: 5px 36px 5px 10px;
    background-color: rgba($gray, 0.1);
    border: none;
    border-radius: 5px;
    display: inline-block;
    appearance: none;
    cursor: pointer;
    outline: none;

    &:-moz-focusring {
      color: transparent;
      text-shadow: 0 0 0 #444;
    }

    &::-ms-expand {
      display: none;
    }

    option {

      .dark-theme & {
        background: $gray;
      }
    }
  }
}
/* ... */

